<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="empty_string"></string>
    <string name="text_memory">M:</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_decimal">.</string>
    <string name="button_divide">/</string>
    <string name="button_multiply">*</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_equals">=</string>
    <string name="button_plus_minus">+/-</string>
    <string name="button_m_plus">M+</string>
    <string name="button_m_minus">M-</string>
    <string name="button_bs">BS</string>
    <string name="button_c">C</string>
    <string name="button_mr">MR</string>
    <string name="button_mc">MC</string>
    <string name="button_perc">%</string>
    <string name="button_sqr">√</string>

</resources>